--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
-application: applicationid
+application: appthingmakeschool
 version: 0-0-0
 runtime: python27
 api_version: 1
@@ -7,7 +7,7 @@ threadsafe: yes
 handlers:
 # MAIN SCRIPT
 - url: .*
-  script: app.app
+  script: api.app
 
 # LIBRARIES
 libraries:
